# dioxus_translator

./: Cargo.toml  Dioxus.toml  README.md  package-lock.json  tailwind.config.js
assets/: tailwind.css
lang/ar/: main.ftl
lang/de/: main.ftl
lang/en-US/: main.ftl
lang/es/: main.ftl
src/: constants.rs  de-DE.ftl  en-US.ftl  es-ES.ftl  main.rs
src/domain/: post.rs
src/model/: app_state.rs
src/repo/: db.rs
src/ui/: icon.rs  lang_drop.rs  mod.rs  nav_bar.rs
src/utils/: click.rs  evals.rs  lang.rs  mod.rs
